# MinVox

./: CMakeLists.txt  README.md
assets/shaders/: gbuffer_gen.frag  gbuffer_gen.vert  global_shading.frag  light_shafts.frag  output_select.frag  shadow_map.frag  shadow_map.vert  spotlight_shading.frag  stencil_shader.frag  stencil_shader.vert
src/: GlobalConfig.cpp  GlobalConfig.hpp  IO.hpp  Main.cpp  Model.hpp  Rendering.hpp  Screens.hpp  VoxModel.hpp
src/io/: ChunkIO.cpp  ChunkIO.hpp  IOUtils.cpp  IOUtils.hpp
src/model/: Chunk.cpp  Chunk.hpp  Chunk.inl  ChunkMesh.cpp  ChunkMesh.hpp  ChunkModel.cpp  ChunkModel.hpp  ChunkOffset.hpp  ChunkOffset.inl  Offset.hpp  Offset.inl  TerrainGeneration.cpp  TerrainGeneration.hpp  TerrainGeneration.inl  Voxel.hpp  Voxel.inl  World.cpp  World.hpp
src/rendering/: Assets.cpp  Assets.hpp  Camera.cpp  Camera.hpp  CubeObject.cpp  CubeObject.hpp  Framebuffer.cpp  Framebuffer.hpp  FullscreenQuadObject.cpp  FullscreenQuadObject.hpp  GBuffer.cpp  GBuffer.hpp  InGameProfiler.cpp  InGameProfiler.hpp  Light.cpp  Light.hpp  PostProcessFramebuffer.cpp  PostProcessFramebuffer.hpp  SSAO.cpp  SSAO.hpp  Shaders.cpp  Shaders.hpp  ShadowMap.cpp  ShadowMap.hpp  SkyCubeObject.cpp  SkyCubeObject.hpp  WorldRenderer.cpp  WorldRenderer.hpp
src/screens/: ActionGameScreen.cpp  ActionGameScreen.hpp  BaseGameScreen.cpp  BaseGameScreen.hpp  CreationGameScreen.cpp  CreationGameScreen.hpp  GameScreen.cpp  GameScreen.hpp  IScreen.hpp  Screen.cpp  Screen.hpp
src/sfz/: GL.hpp
src/sfz/gl/: Alignment.hpp  OpenGL.hpp  SMAA.cpp  SMAA.hpp  SpriteBatch.cpp  SpriteBatch.hpp  Texture.cpp  Texture.hpp  TexturePacker.cpp  TexturePacker.hpp  TextureRegion.hpp  Utils.cpp  Utils.hpp
src/sfz/gl/font/: FontRenderer.cpp  FontRenderer.hpp
src/sfz/sdl/: GameController.cpp  GameController.hpp
